middlewareDeployment/seata/mysql-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: seata-ns
spec:
  ports:
    - port: 3306
      name: mysql
  clusterIP: None
  selector:
    app: mysql-public
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: seata-ns
spec:
  selector:
    matchLabels:
      app: mysql-public
  serviceName: "mysql"
  template:
    metadata:
      labels:
        app: mysql-public
    spec:
      containers:
        - name: mysql
          image: shixiaochuangk8s/mysql:5.7
          ports:
            - containerPort: 3306

          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: data

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "csi-rbd-sc"
        resources:
          requests:
            storage: 10Gi
