middlewareDeployment/seata/seata-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: seata-server
  namespace: seata-ns
spec:
  type: ClusterIP
  selector:
    app: seata-server
  ports:
    - name: service
      port: 8091
      targetPort: 8091
    - name: console
      port: 7091
      targetPort: 7091
