middlewareDeployment/seata/seata-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: seata-gateway
  namespace: seata-ns
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seata
  namespace: seata-ns
spec:
  parentRefs:
    - name: seata-gateway
      namespace: seata-ns
  hostnames:
    - seata.shixiaochuang.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seata-server
          port: 7091
