middlewareDeployment/seata/seata-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seata-server
  namespace: seata-ns
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`seata.shixiaochuang.net`)
      kind: Rule
      services:
        - name: seata-server
          port: 7091
